--- a/content/css/reset.css
+++ b/content/css/reset.css
@@ -1,181 +1,35 @@
-@charset "UTF-8";
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video,
-button {
+/* Reset Stylesheet */
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap");
+@font-face {
+  font-family: "vitro";
+  src: url("../font/vitro.ttf") format("woff"), url("../font/vitro.ttf") format("ttf");
+}
+html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong, sub, sup, var,
+b, i, button, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section, summary, time, mark, audio, video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 100%;
+  outline: 0;
   vertical-align: baseline;
+  box-sizing: border-box;
 }
 
-ol,
-ul {
-  list-style: none;
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+  display: block;
 }
 
-blockquote,
-q {
-  quotes: none;
-}
-
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: "";
-  content: none;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-strong, b {
-  font-weight: normal;
-}
-
-em, i {
-  font-style: normal;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-button {
-  border: none;
-  cursor: pointer;
-  background: none;
-  color: #333;
+html {
+  height: 100%;
+  min-width: 1500px;
   font-size: 16px;
-  font-family: "NotoSansR", sans-serif;
 }
 
-i {
-  font-style: normal;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: normal;
-}
-
-input[type=checkbox] {
-  display: none;
-}
-
-@font-face {
-  font-family: "NotoSansL";
-  src: url("../font/notokr-light.eot");
-  src: url("../font/notokr-light.eot?#iefix") format("embedded-opentype"), url("../font/notokr-light.woff") format("woff");
-}
-@font-face {
-  font-family: "NotoSansR";
-  src: url("../font/notokr-regular.eot");
-  src: url("../font/notokr-regular.eot?#iefix") format("embedded-opentype"), url("../font/notokr-regular.woff") format("woff");
-}
-@font-face {
-  font-family: "NotoSansM";
-  src: url("../font/notokr-medium.eot");
-  src: url("../font/notokr-medium.eot?#iefix") format("embedded-opentype"), url("../font/notokr-medium.woff") format("woff");
-}
-@font-face {
-  font-family: "NotoSansB";
-  src: url("../font/notokr-bold.eot");
-  src: url("../font/notokr-bold.eot?#iefix") format("embedded-opentype"), url("../font/notokr-bold.woff") format("woff");
-}
 body {
   height: 100%;
   color: #333;
   font-size: 16px;
-  font-family: "NotoSansR", sans-serif;
+  font-family: "Noto Sans KR", sans-serif;
   word-break: keep-all;
 }
 body::-webkit-scrollbar {
@@ -190,46 +44,73 @@ body::-webkit-scrollbar-track {
   border-radius: 5px;
 }
 
-input[type=checkbox] + label {
-  cursor: pointer;
+nav, ul, ul li, ol, ol li {
+  list-style: none;
 }
-input[type=checkbox] + label::before {
+
+blockquote, q {
+  quotes: none;
+}
+
+blockquote:before, blockquote:after, q:before, q:after {
   content: "";
-  display: inline-block;
-  width: 1rem;
-  height: 1rem;
+  content: none;
+}
+
+a {
+  margin: 0;
+  padding: 0;
+  vertical-align: baseline;
+  background: transparent;
+}
+
+a, a:active, a:hover, a:visited {
+  text-decoration: none;
+  color: #333;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  width: 100%;
+}
+
+table th {
   vertical-align: middle;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-color: #fff;
-  border-radius: 3px;
-  margin-right: 0.5rem;
 }
 
-input[type=checkbox]:checked + label::before {
-  background: url("../image/checkbox_on_2.png") left top no-repeat;
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #cccccc;
+  margin: 1em 0;
+  padding: 0;
 }
 
-select {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  padding: 0.5rem 2rem 0.5rem 0.5rem;
-  margin: 0 1rem;
-  background: url("../image/icon_select.png") no-repeat 95% 50%;
-  border: none;
-  font-family: "NotoSansR";
-  cursor: pointer;
-}
-
-select::-ms-expand {
+caption, legend, figcaption {
   display: none;
 }
 
-.center {
-  position: relative;
-  width: 78.75rem;
-  margin: 0 auto;
+img {
+  -ms-interpolation-mode: bicubic;
+}
+
+::selection {
+  background-color: #fff;
+  color: #fdba1e;
+}
+
+.sr_only {
+  position: absolute;
+  width: 1px !important;
+  height: 1px !important;
+  padding: 0 !important;
+  margin: -1px !important;
+  overflow: hidden !important;
+  clip: rect(0, 0, 0, 0) !important;
+  white-space: nowrap !important;
+  border: 0 !important;
 }
 
 .pc_only {
@@ -238,69 +119,4 @@ select::-ms-expand {
 
 .mob_only {
   display: none;
-}
-
-body.uni-mob {
-  min-width: 280px;
-  max-width: 768px;
-  width: 100%;
-  margin: 0 auto;
-}
-body.uni-mob .center {
-  position: initial;
-  width: 90%;
-}
-body.uni-mob select {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  padding: 0.5rem 2rem 0.5rem 0.5rem;
-  margin: 0 1rem;
-  background: url("../image/icon_select.png") no-repeat 95% 50%;
-  width: 5.625rem;
-  margin: 0 0 0 0.4rem;
-  background-color: #fff;
-  border: 1px solid #c9c9c9;
-  border-radius: 0.3rem;
-  font-family: "NotoSansR";
-  font-size: 0.75rem;
-  cursor: pointer;
-}
-body.uni-mob .pc_only {
-  display: none;
-}
-body.uni-mob .mob_only {
-  display: inline-block;
-}
-
-/*타블렛*/
-@media only screen and (max-width: 1260px) and (min-width: 769px) {
-  body::-webkit-scrollbar {
-    width: 0px;
-  }
-  body::-webkit-scrollbar-thumb {
-    background-color: #6d6d6d;
-    border-radius: 0px;
-  }
-  body::-webkit-scrollbar-track {
-    background-color: #bebebe;
-    border-radius: 0px;
-  }
-  .center {
-    width: 90%;
-  }
-  header > div.center p {
-    display: none !important;
-  }
-}
-/*모바일*/
-@media only screen and (max-width: 768px) and (min-width: 280px) {
-  html, body {
-    font-size: 4.267vw;
-  }
-}
-@media only screen and (max-width: 280px) {
-  html, body {
-    font-size: 12px;
-  }
 }/*# sourceMappingURL=reset.css.map */
