--- a/content/css/style.scss
+++ b/content/css/style.scss
@@ -1,8 +1,4 @@
 @charset "utf-8";
-@import "reset";
-@import "header";
-@import "main"; 
-@import "sub";
+@import "reset.scss";    
+@import "main.scss"; 
   
-  
-                           
