--- a/css/style.css
+++ b/css/style.css
@@ -310,11 +310,11 @@ section.mainBox .sticky .port-boxes .port-box ul {
 section.mainBox .sticky .port-boxes .port-box ul li {
   line-height: 1.5;
 }
-section.mainBox .sticky .port-boxes .port-box ul li span {
+section.mainBox .sticky .port-boxes .port-box ul li > span {
   position: relative;
   font-weight: 700;
 }
-section.mainBox .sticky .port-boxes .port-box ul li span::after {
+section.mainBox .sticky .port-boxes .port-box ul li > span::after {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -337,6 +337,7 @@ section.mainBox .sticky .port-boxes .port-box ul li .btn-area a {
   border: 1px solid #333;
   color: #333;
   font-weight: 700;
+  transition: all 0.3s;
 }
 section.mainBox .sticky .port-boxes .port-box ul li .btn-area a::before {
   content: "";
@@ -365,12 +366,26 @@ section.mainBox .sticky .port-boxes .port-box ul li .btn-area a::after {
   transform: skewX(40deg);
   background-color: #333;
 }
+section.mainBox .sticky .port-boxes .port-box ul li .btn-area a span {
+  display: inline-block;
+  width: 0;
+  height: 0;
+  font-size: 0.75rem;
+  font-weight: normal;
+  color: #ccc;
+  vertical-align: bottom;
+  overflow: hidden;
+}
 section.mainBox .sticky .port-boxes .port-box ul li .btn-area a:hover {
   background-color: #333;
   color: #fff;
 }
 section.mainBox .sticky .port-boxes .port-box ul li .btn-area a:hover::before, section.mainBox .sticky .port-boxes .port-box ul li .btn-area a:hover::after {
   background-color: #fff;
+}
+section.mainBox .sticky .port-boxes .port-box ul li .btn-area a:hover span {
+  width: auto;
+  height: auto;
 }
 section.mainBox.on .titleBox {
   height: 40vh;
@@ -463,6 +478,7 @@ section:nth-of-type(2) > div .slide {
 section:nth-of-type(2) > div .slide .slide-img {
   display: inline-block;
   height: 100%;
+  cursor: grab;
 }
 
 footer {
