--- a/css/_common.scss
+++ b/css/_common.scss
@@ -25,7 +25,7 @@ $border-color :#e5e8eb;
     font-weight: normal;
 }
 @mixin vitro{
-  font-family: 'vitro','Noto Sans KR', sans-serif;
+  font-family: 'vitro', sans-serif;
 }
 
 @mixin gradient{    
