--- a/css/style.scss
+++ b/css/style.scss
@@ -1,4 +1,5 @@
 @charset "utf-8";
-@import "_base.scss";    
-@import "_common.scss"; 
-@import "_main.scss"; 
+@import "_reset";
+@import "_common";
+@import "_header";
+@import "_main"; 
