--- a/css/style.css
+++ b/css/style.css
@@ -206,12 +206,12 @@ body {
 }
 
 ::-moz-selection {
-  background-color: #4bd254;
+  background-color: #00bb9c;
   color: #fff;
 }
 
 ::selection {
-  background-color: #4bd254;
+  background-color: #00bb9c;
   color: #fff;
 }
 
@@ -230,6 +230,22 @@ body {
   }
   100% {
     height: 100%;
+  }
+}
+@-webkit-keyframes ani-width {
+  0% {
+    width: 0%;
+  }
+  100% {
+    width: 110%;
+  }
+}
+@keyframes ani-width {
+  0% {
+    width: 0%;
+  }
+  100% {
+    width: 110%;
   }
 }
 @-webkit-keyframes ani-height {
@@ -457,10 +473,6 @@ body {
   color: #2a6cef;
 }
 
-.txt_sub {
-  color: #30c98d;
-}
-
 .btn {
   display: inline-block;
   padding: 0.8rem 0rem;
@@ -565,7 +577,7 @@ body {
   left: 0;
   bottom: calc(120% + 5.5rem);
   display: block;
-  width: 18rem;
+  width: 20rem;
   content: attr(data-progressname);
   font-family: "TTTtangsbudaejjigaeB";
   -webkit-transform: translate(-48.5%, -50%) rotate(90deg);
@@ -578,14 +590,14 @@ body {
   display: block;
   height: 32rem;
   width: 0.1rem;
-  background-color: #ccc;
+  background-color: #111;
 }
 .progressBarBox .progressBar i {
   position: absolute;
   display: block;
   width: 100%;
   height: 0%;
-  background-color: #373737;
+  background-color: #00bb9c;
 }
 
 @media only screen and (min-width: 1920px) {
@@ -617,7 +629,7 @@ header {
   top: 8rem;
   left: 0;
   width: 100%;
-  z-index: 4000;
+  z-index: 1;
 }
 header .center {
   display: -webkit-box;
@@ -632,7 +644,7 @@ header .center {
   max-width: 144rem;
   margin: 0 auto;
 }
-header .center span {
+header .center span, header .center button {
   display: block;
   color: #111;
   font-size: 3rem;
@@ -641,8 +653,8 @@ header .center span {
   transition: all 0.3s;
   cursor: pointer;
 }
-header .center span:hover {
-  color: #4bd254;
+header .center h1 span {
+  font-family: "TTTtangsbudaejjigaeB";
 }
 header .center .pageMenu {
   display: -webkit-box;
@@ -650,6 +662,27 @@ header .center .pageMenu {
   display: flex;
   gap: 3rem;
   z-index: 4500;
+}
+header .center .pageMenu li {
+  position: relative;
+}
+header .center .pageMenu li:hover span, header .center .pageMenu li:hover button {
+  font-weight: 700;
+}
+header .center .pageMenu li:hover:after {
+  position: absolute;
+  bottom: 5%;
+  left: -5%;
+  content: "";
+  display: block;
+  height: 3rem;
+  background-color: #00bb9c;
+  -webkit-transform: skew(-10deg);
+          transform: skew(-10deg);
+  z-index: 5;
+  opacity: 0.5;
+  -webkit-animation: ani-width 0.2s ease-in-out 0s forwards;
+          animation: ani-width 0.2s ease-in-out 0s forwards;
 }
 
 footer {
@@ -849,6 +882,15 @@ footer .center .copyright {
   -webkit-animation-iteration-count: infinite;
           animation-iteration-count: infinite;
 }
+.main .main02 h2 {
+  position: sticky;
+  top: 75%;
+  left: -15%;
+  font-family: "TTTtangsbudaejjigaeB";
+  font-size: 30rem;
+  color: #d8d8d8;
+  opacity: 0.5;
+}
 .main .main02 .center {
   height: 5000px;
 }
@@ -858,7 +900,10 @@ footer .center .copyright {
   width: 95%;
   min-height: 60vh;
   border-radius: 1rem;
-  background-color: #aaa;
+  background-color: #fff;
+  border: 1px solid #e5e8eb;
+  -webkit-box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.05);
+          box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.05);
   overflow: hidden;
 }
 .main .main02 .center .animateFadeList > li {
